# MakeCPPFunAgain

./: .gitignore  CMakeLists.txt  README.md
cmake/: mcppfaConfig.cmake.in
course/: ROADMAP.md
course/chapter-0/: README.md
course/chapter-0/notebooks/: 01_setup.ipynb  02_first_notebook.ipynb  99_mcq.ipynb
course/chapter-0/notes/: 01_setup.md  02_first_notebook.md
course/chapter-1/: README.md
course/chapter-1/notebooks/: 06_io.ipynb  (+7 more)
docs/: SETUP_HUGGINGFACE_XCPP17.ipynb  SETUP_XCPP17.md
docs/mcppfa/: README.md  bert_huggingface.md  columns.md  csv.md  hf_dataset.md  hf_trainer.md  huggingface.md  indexing.md  model_loader.md  model_summary.md  notebook_setup.md  print.md  psql_dataframe.md  safetensors.md  sentencepiece_lite.md  strings.md  tokenizer_decoder.md  torch_bert.md  torch_bert_train.md  torch_char_lm.md  torch_distilbert.md  torch_lstm.md  type_name.md  word_vocab.md
include/mcppfa/: bert_huggingface.hpp  columns.hpp  csv.hpp  hf_dataset.hpp  hf_trainer.hpp  huggingface.hpp  indexing.hpp  mcppfa.hpp  model_loader.hpp  model_summary.hpp  notebook_setup.hpp  print.hpp  psql_dataframe.hpp  safetensors.hpp  sentencepiece_lite.hpp  strings.hpp  tokenizer_decoder.hpp  torch_bert.hpp  torch_bert_train.hpp  torch_char_lm.hpp  torch_distilbert.hpp  torch_lstm.hpp  type_name.hpp  word_vocab.hpp
include/plotpp/: plotpp.hpp
notebooks/: cpp_ga.ipynb  pg_dataframe_workflow.ipynb  t5_pretrain.ipynb
notebooks/AG News Classification/: ag-news-classification-lstm.ipynb  train.ipynb
notebooks/AOC_CPP_TEST/: problems.ipynb
scripts/: setup_xcpp_mcppfa.sh
(+30 files in other folders)
